<resources>
    <string name="app_name">Tanum</string>
    <string name="title_beranda">Beranda</string>
    <string name="title_lahan_saya">Lahan Saya</string>
    <string name="title_artikel">Artikel</string>
    <string name="title_profil">Profil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_tanum">Selamat datang di Tanum!</string>
    <string name="silakan_masuk_untuk_memulai">Silakan masuk untuk memulai.</string>
    <string name="no_hp_hint">No. Handphone</string>
    <string name="password_hint">Kata Sandi</string>
    <string name="masuk">Masuk</string>
    <string name="spannable_string_login">Belum punya akun? Daftar sekarang</string>
    <string name="login_alert">Harap isi email dan password terlebih dahulu</string>
    <string name="registrasi_akun">Registrasi Akun</string>
    <string name="register_first">Untuk memulai, silakan isi data berikut untuk membuat akun.</string>
    <string name="petani">Petani</string>
    <string name="template_text_view">TextView</string>
    <string name="peran">Peran</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="registrasi">Registrasi</string>
    <string name="register_alert">Semua form wajib diisi terlebih dahulu</string>
    <string name="lahan_saya_null">Kamu belum memiliki lahan. Ayo tambahkan lahan untuk melakukan pencatatan aktivitas budidaya.</string>
    <string name="tambahkan_lahan">Tambahkan Lahan</string>
    <string name="welcome_template">Halo, Petani</string>
    <string name="welcome_message_html">Selamat datang di &lt;b&gt;Tanum&lt;/b&gt;. Mau catat apa hari ini?</string>
    <string name="lihat_lahan_lainnya"><![CDATA[Lihat lahan lainnya >]]></string>
    <string name="lihat_artikel_lainnya"><![CDATA[Lihat artikel lainnya >]]></string>
    <string name="artikel_null">Artikel belum tersedia</string>
    <string name="berita">Berita</string>
    <string name="lihat_berita_lainnya"><![CDATA[Lihat berita lainnya >]]></string>
    <string name="berita_null">Berita belum tersedia</string>
    <string name="video">Video</string>
    <string name="lihat_video_lainnya"><![CDATA[Lihat video lainnya >]]></string>
    <string name="video_null">Video belum tersedia</string>
    <string name="log_out">Log out</string>
    <string name="nama_lahan">Nama Lahan</string>
    <string name="nama_komoditas">Nama Komoditas</string>
    <string name="nama_varietas">Nama Varietas</string>
    <string name="luas">Luas</string>
    <string name="usia">Usia</string>
    <string name="judul_berita_exp">Sektor Pertanian Indramayu Tetap Produktif di Musim Kemarau</string>
    <string name="judul_berita">Judul berita</string>
    <string name="isi_berita_lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</string>
    <string name="template_tanggal">hh MM YYYY</string>
    <string name="kategori">Kategori</string>
    <string name="kegiatan">Kegiatan</string>
    <string name="biaya">Biaya</string>
    <string name="alamat">Alamat</string>
    <string name="kepemilikan">Kepemilikan</string>
    <string name="tanaman">Tanaman</string>
    <string name="tanggal_mulai_tanam">Tanggal mulai tanam</string>
    <string name="tambahkan_aktivitas">Tambahkan aktivitas</string>
    <string name="varietas">Varietas</string>
    <string name="tanggal_tanam">Tanggal tanam</string>
    <string name="usia_tanaman">Usia tanaman</string>
    <string name="edit_detail_lahan">Edit detail lahan</string>
    <string name="aktivitas">Aktivitas</string>
    <string name="total_biaya">Total biaya</string>
    <string name="keuntungan">Keuntungan</string>
    <string name="waktu_kegiatan">Waktu kegiatan</string>
    <string name="failed">Gagal</string>
    <string name="success">Berhasil</string>
    <string name="next">Lanjut</string>
    <string name="required_form">Anda harus mengisi semua form terlebih dahulu</string>
    <string name="register_failed_message">Anda gagal mendaftar.</string>
    <string name="failed_news">Gagal memuat berita</string>
    <string name="failed_video">Gagal memuat video</string>
    <string name="form_need_to_fill">Harap isi semua formulir terlebih dahulu</string>
    <string name="land_edit_success">Berhasil mengubah lahan</string>
    <string name="failed_delete_land">Gagal menghapus lahan</string>
    <string name="success_delete_land">Berhasil menghapus lahan</string>
    <string name="failed_to_load_lands">Gagal memuat lahan saya</string>
    <string name="failed_to_load_land_detail">Gagal memuat detail lahan</string>
    <string name="failed_to_delete_activity">Gagal menghapus aktivitas</string>
    <string name="success_delete_activity">Berhasil menghapus aktivitas</string>
    <string name="failed_to_load_activity_data">Gagal memuat data aktivitas sebelumnya</string>
    <string name="activity_edit_success">Berhasil mengubah aktivitas</string>

    <!--    String array for drop down-->
    <string-array name="role">
        <item>Petani</item>
        <item>Pengepul</item>
    </string-array>

    <string-array name="kepemilikan">
        <item>Milik sendiri</item>
        <item>Sewa</item>
        <item>Bagi hasil</item>
    </string-array>

    <string-array name="kategori">
        <item>Pra-tanam</item>
        <item>Tanam</item>
        <item>Pemeliharaan</item>
        <item>Panen</item>
        <item>Penjualan</item>
    </string-array>

    <string-array name="pra_tanam">
        <item>Pembersihan lahan</item>
        <item>Bajak lahan</item>
        <item>Pembelian herbisida</item>
        <item>Penyemprotan lahan</item>
        <item>Pembalian pupuk</item>
        <item>Pemupukan lahan</item>
    </string-array>

    <string-array name="tanam">
        <item>Pembelian bibit</item>
        <item>Pemotongan bibit</item>
        <item>Penanaman</item>
    </string-array>

    <string-array name="pemeliharaan">
        <item>Penyulaman</item>
        <item>Penyemprotan</item>
        <item>Pemangkasan tunas</item>
        <item>Pembalian pupuk</item>
        <item>Pemupukan lahan</item>
    </string-array>

    <string-array name="panen">
        <item>Ongkos pencabutan</item>
        <item>Ongkos transportasi</item>
    </string-array>

    <string-array name="penjualan">
        <item>Penjualan hasil panen</item>
    </string-array>
</resources>