<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginVertical="8dp"
    app:cardCornerRadius="16dp"
    android:layout_width="match_parent"
    android:layout_height="160dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivItemLahan"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            tools:src="@tools:sample/avatars"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#f0f0f0"
            android:paddingHorizontal="24dp"
            android:orientation="vertical"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivItemLahan"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" >

            <TextView
                android:id="@+id/tvNamaLahan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/nama_lahan"
                android:textAlignment="textStart" />

            <TextView
                android:id="@+id/tvNamaKomoditas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/nama_komoditas"
                android:textAlignment="textStart"
                android:layout_marginTop="2dp"/>

            <TextView
                android:id="@+id/tvNamaVarietas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/nama_varietas"
                android:textAlignment="textStart"
                android:layout_marginTop="2dp"/>

            <TextView
                android:id="@+id/tvLuas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/luas"
                android:textAlignment="textStart"
                android:layout_marginTop="2dp"/>

            <TextView
                android:id="@+id/tvUsia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/usia"
                android:textAlignment="textStart"
                android:layout_marginTop="2dp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>