<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="160dp">

    <TextView
        android:id="@+id/tvTanggal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/template_tanggal"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    
    <ImageButton
        android:id="@+id/buttonDelete"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_baseline_delete_24"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tvTanggal" />

    <ImageButton
        android:id="@+id/buttonEdit"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_baseline_edit_24"
        android:layout_marginHorizontal="8dp"
        app:layout_constraintEnd_toStartOf="@id/buttonDelete"
        app:layout_constraintBottom_toBottomOf="@id/tvTanggal" />

    <TextView
        android:id="@+id/tvKategori"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kategori"
        android:textSize="16sp"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/black"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTanggal" />

    <TextView
        android:id="@+id/tvKategoriInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kategori"
        android:textSize="16sp"
        android:fontFamily="@font/lato_regular"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTanggal" />

    <TextView
        android:id="@+id/tvKegiatan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kegiatan"
        android:textSize="16sp"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvKategori" />

    <TextView
        android:id="@+id/tvKegiatanInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kegiatan"
        android:textSize="16sp"
        android:fontFamily="@font/lato_regular"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvKategoriInfo" />

    <TextView
        android:id="@+id/tvBiaya"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biaya"
        android:textSize="16sp"
        android:fontFamily="@font/lato_bold"
        android:textColor="@color/black"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvKegiatan" />

    <TextView
        android:id="@+id/tvBiayaInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/biaya"
        android:textSize="16sp"
        android:fontFamily="@font/lato_regular"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvKegiatanInfo" />

</androidx.constraintlayout.widget.ConstraintLayout>